# 3D-CONSTRUCTOR

./: .gitignore  README.md
src/: CMakeLists.txt  FragmentShader.glsl  VertexShader.glsl  common.h  controller.cpp  controller.h  kinectreceiver.cpp  kinectreceiver.h  main.cpp  openglviewer.cpp  openglviewer.h  pclregister.cpp  pclregister.h  test.data  wrapper.cpp  wrapper.h  wrapper.ui  wrapper.ui.autosave  wrapper.ui.autosave.We4272  wrapper.ui.autosave.jg4272  wrapper.ui.autosave.lj4272
